uprading the  project